--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <p class="text-center text-white mb-0 mt-3 download">Download PDF Version</p>
+            </div>
+        </div>
+    </div>
     <div class="container mb-3">
         <!-- FIRST PAGE -->
         <div class="row h-100 mb-3">
